@@ -3,6 +3,8 @@ Revision history for Perl module Net::Mosso::CloudFiles:
 0.35
     - Reauthenticate when the authentication token expires
       (after one hour)
+    - Return more than 10,000 objects by issuing multiple calls
+      (objects now returns a Data::Stream::Bulk object)
 
 0.34 Tue Jan 13 15:37:27 GMT 2009
     - Retry upon errors using LWP::UserAgent::Determined
